Stop image from overflow

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -177,6 +177,9 @@ header h1 {
   list-style-type: circle;
   list-style-position: inside;
 }
+.body .content #main img {
+  max-width: 100%;
+}
 .body .content aside {
   flex-basis: 20rem;
   background-color: #e6e6e6;
